--- a/src/main/resources/templates/book/bookForm.html
+++ b/src/main/resources/templates/book/bookForm.html
@@ -1,7 +1,8 @@
-<%@ page contentType="text/html;charset=UTF-8" language="java" %>
-<html>
+<!DOCTYPE html>
+<html lang="en">
     <head>
-        <title>Manage Users</title>
+        <meta charset="UTF-8">
+        <title>Books</title>
     </head>
     <body>
         Not Implemented yet <a href="/">Return Home</a>
