--- a/src/main/resources/templates/book/index.html
+++ b/src/main/resources/templates/book/index.html
@@ -1,9 +1,32 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th="http://www.thymeleaf.org" >
     <head>
         <title>Manage Books</title>
     </head>
     <body>
-        Not Implemented yet <a href="/">Return Home</a>
+        <a href="/">Return Home</a>
+        <span th:if="${error != null}" th:text="${error}">Static summary</span>
+        <h2 th:text="'Books Page'">Books Page</h2>
+        <hr>
+        "${book.name}",
+        <table id="owners" class="table table-striped">
+            <thead>
+            <tr>
+                <td>Id</td>
+                <td style="width: 100px">Name</td>
+                <td style="width: 300px">Summary</td>
+                <td>Delete</td>
+            </tr>
+            </thead>
+            <tbody>
+            <tr th:each="book:${books}">
+                <td th:text="${book.name}"></td>
+                <td th:text="${book.summary}"></td>
+                <td th:text="${book.isbn}"></td>
+                <td th:text="${book.isbn}"></td>
+                <td><a th:href="@{/book/delete(bookId=${book.id})}"></a>Delete Book</td>
+            </tr>
+            </tbody>
+        </table>
     </body>
 </html>
