--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -5,10 +5,11 @@
         <title>Main Menu</title>
     </head>
     <body>
-        <a href="userForm">Create Users</a>
-        <a href="bookForm">Create Books</a>
-        <a href="users">See Users</a>
-        <a href="books">See Books</a>
-        <a href="loan">Loan Books</a>
+        <a href="userForm">Create Users</a> <br>
+        <a href="bookForm">Create Books</a> <br>
+        <a href="/users">See Users</a> <br>
+        <a href="/books">See Books</a> <br>
+        <a href="/loan">Loan Books</a>
+        <a href="/loan">Return a Book</a>
     </body>
 </html>
