--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -9,7 +9,7 @@
         <a href="bookForm">Create Books</a> <br>
         <a href="/users">See Users</a> <br>
         <a href="/books">See Books</a> <br>
-        <a href="/loan">Loan Books</a>
+        <a href="/loan">Loan Books</a> <br>
         <a href="/loan">Return a Book</a>
     </body>
 </html>
