--- a/src/main/resources/templates/user/userForm.html
+++ b/src/main/resources/templates/user/userForm.html
@@ -1,9 +1,47 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th="http://www.thymeleaf.org" >
     <head>
         <title>Manage Users</title>
     </head>
     <body>
-        Not Implemented yet <a href="/">Return Home</a>
+        <form action="#" th:action="@{/user}" th:object="${user}" method="post">
+            <h2>
+                Book Form
+            </h2>
+            <hr>
+            <table id="book" class="table table-striped">
+                <tr>
+                    <td>First Name</td>
+                    <td><input type="text" name="firstName" th:field="*{firstName}" class="form-control" required="required" placeholder="First Name"/></td>
+                </tr>
+                <tr>
+                    <td>Last Name</td>
+                    <td><input type="text" name="lastName" th:field="*{lastName}" class="form-control" required="required" placeholder="Last Name"/></td>
+                </tr>
+                <tr>
+                    <td>Street</td>
+                    <td><input type="text" name="isbn" th:field="*{address.street}" class="form-control" required="required" placeholder="Street"/></td>
+                </tr>
+                <tr>
+                    <td>House Number</td>
+                    <td><input type="number" name="houseNumber" th:field="*{address.houseNumber}" class="form-control" required="required" placeholder="House Number"/></td>
+                </tr>
+                <tr>
+                    <td>Postal Code</td>
+                    <td><input type="text" name="postalCode" th:field="*{address.postalCode}" class="form-control" required="required" placeholder="Postal Code"/></td>
+                </tr>
+                <tr>
+                    <td>Town</td>
+                    <td><input type="text" name="houseNumber" th:field="*{address.town}" class="form-control" required="required" placeholder="Town"/></td>
+                </tr>
+                <tr>
+                    <td>
+                        <input type="submit" value="Save User" />
+                        <button><a style="text-decoration: none" href="/">Cancel</a> </button>
+                        <input type="reset" value="Reset" />
+                    </td>
+                </tr>
+            </table>
+        </form>
     </body>
 </html>
