--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -10,6 +10,6 @@
         <a href="/users">See Users</a> <br>
         <a href="/books">See Books</a> <br>
         <a href="/loan">Loan Books</a> <br>
-        <a href="/loan">Return a Book</a>
+        <a href="/return">Return a Book</a>
     </body>
 </html>
