--- a/src/main/resources/templates/book/loanReturn.html
+++ b/src/main/resources/templates/book/loanReturn.html
@@ -15,7 +15,7 @@
                         <span th:text="'&quot;' + ${loanReturn.getBook().getName()} + '&quot;'" ></span>
                         <span th:if="${loanReturnForm.isLoan()}" th:text="', ' + ${loanReturn.getBook().getAvailable()} + ' available'" ></span>
                         <select th:field="*{userId}">
-                            <option value="" selected="true" disabled="disabled"> -- </option>
+                            <option value="" > -- </option>
                             <option th:each="user : ${loanReturn.getUsers()}" th:value="${user.getId()}" th:text="${user.getFirstName() + ' ' + user.getLastName()}">
                             </option>
                         </select>
