Minor refactor in forms

--- a/src/main/resources/templates/book/bookForm.html
+++ b/src/main/resources/templates/book/bookForm.html
@@ -25,7 +25,7 @@
                 </tr>
                 <tr>
                     <td>Purchased</td>
-                    <td><input type="number" name="purchased" th:field="*{purchased}" class="form-control" required="required" placeholder="Books Purchased"/></td>
+                    <td><input type="number" min="1" name="purchased" th:field="*{purchased}" class="form-control" required="required" placeholder="Books Purchased"/></td>
                 </tr>
                 <tr>
                     <td>
